fixed line spacing with platforms and ratings

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -135,6 +135,7 @@ button.btn.btn-default.btn-lg.cancel-button {
 
 
 
+
 /*----------------------------------------------------------------------
 Navigation
 -----------------------------------------------------------------------*/
@@ -227,7 +228,7 @@ Search
 }
 
 .content p {
-  margin: 0 0 3px;
+  line-height: 2;
 }
 
 .results {
